<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@drawable/primary"
    >

    <include layout="@layout/header"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/user_name_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:backgroundTint="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/house_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/house_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/house_no"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/street_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/street_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/street"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/landmark_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/landmark_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/landmark"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/city_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/city_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/city"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/state_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/state_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/state"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/country_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/country_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/country"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pincode_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/pincode_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/pincode"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/country_code_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/country_code_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/country_code"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_marginTop="@dimen/size_10dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/gender_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/gender"
                    android:textSize="@dimen/text_18sp"/>

                <RadioGroup
                    android:layout_marginLeft="@dimen/size_20dp"
                    android:layout_marginStart="@dimen/size_20dp"
                    android:layout_toRightOf="@id/gender_tv"
                    android:layout_toEndOf="@id/gender_tv"
                    android:id="@+id/radioSex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="male"
                        android:textColor="#ffff"
                        android:textSize="@dimen/text_18sp"
                        android:checked="true" />
                    <RadioButton
                        android:textColor="#ffff"
                        android:id="@+id/radioFemale"
                        android:textSize="@dimen/text_18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="female" />
                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40dp">


                <TextView
                    android:id="@+id/dob_t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/dob"
                    android:textSize="@dimen/text_18sp"/>

                <Button
                    android:layout_marginLeft="@dimen/size_20dp"
                    android:layout_marginStart="@dimen/size_20dp"
                    android:layout_toRightOf="@id/dob_t"
                    android:layout_toEndOf="@id/dob_t"
                    android:id="@+id/dob"
                    android:onClick="onClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                </Button>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_80dp"
                android:padding="@dimen/size_18dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/submit"
                    android:text="@string/submit"
                    android:onClick="onClick"
                    />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>