<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/edit_name"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:id="@+id/lbl_your_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_address" />


        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/edit_address_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:hint="@string/edit_address"
            android:inputType="text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/done"
            android:id="@+id/done"/>

    </LinearLayout>
</RelativeLayout>